2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/perl.lang: try to avoid problems
        with pattern rules, bugs 507075 and 535703.

2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcebuffer.c: use a limit of 10000
        instead of 2000 for searching matching brackets.

2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/ocaml.lang: fix camlCase
        highlighting. Bug 532698.

2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/haskell.lang: {- -} comments
        may be nested, bug #532964.

2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/sh.lang: do not treat <<< as
        here-document start. Bug #538762.

2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/ruby.lang (predefined-variables):
        do not use \b after non-word characters, fixes bug #538967.
	* gtksourceview/language-specs/objc.lang: highlight self and
        super; highlight nil and Nil as YES and NO.

2008-06-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* tests/test-widget.c: Fixed compilation warning.

2008-06-05  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: do not (un)indent if the view is
	not editable. Bug #536554.

2008-04-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview-zip.in: zip style schemes and fix docs dir.

2008-04-25  Juerg Billeter  <j@bitron.ch>

	* gtksourceview/language-specs/vala.lang: update keyword list to
	match Vala 0.3.1

2008-04-13  Armin Burgmeier  <armin@arbur.net>

	* gtksourceview/gtksourceundomanager.c
	(gtk_source_undo_manager_add_action),
	(gtk_source_undo_manager_insert_text_handler): Handle insertion of
	non-null-terminated strings correctly.

2008-04-11  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/octave.lang: corrected
	non-existent style reference (#527484).

2008-04-09  Yevgen Muntyan  <muntyan@tamu.edu>
